[package]
name = "d4evts"
version = "0.2.1"
description = "A simple Diablo 4 'clock' to show the next world boss and legion events"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4", features=["derive", "cargo"] }
log = "0.4"
chrono = "0.4"
anyhow = "1"
gtk4 = { version = "0.9.5", features = ["v4_14"] }

[profile.dev]
overflow-checks = true
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true

[[bin]]
name = "d4evts"
path = "src/d4evts.rs"
